syntax = "proto3";
package client;

option go_package = "./clientpb";

message ClientMessage {
    bytes Signature = 1;
    string Payload = 2;
}

message ClientMessages {
    repeated ClientMessage Payload = 1;
}
